@@ -1,6 +1,10 @@
 == 3030-12-31 Getting Started
 <p>If you're new to Constellation, read the <a href="" helpId="au.gov.asd.tac.constellation.functionality.gettingstarted">getting started guide</a>.</p>
 
+== 2023-07-28 Attribute Editor View - Edit Buttons
+<p>Edit buttons have been removed from attributes in the Attributes View.</p>
+<p>Edit functionality can be achieved by clicking on the field of the attribute.</p>
+
 == 2023-07-28 Replacement of old Find View with new Find View
 <p>The existing Find View accessible using the shortcut Ctrl-F has been replaced with the an updated Find View which has been under development and testing.</p> 
 <p>The new Find View offers an updated interface that opens by default in a separate window.</p> 
